--- a/mobile/kmj_m.html
+++ b/mobile/kmj_m.html
@@ -13,7 +13,7 @@
 <!-- 상단 바 및 메뉴버튼 아이콘 -->
 <div class="mobile-top-bar">
     <img class="ico toggle-side-bar-btn" src="logo4.png">
-    </img>
+    <img>
     <div class="logo"></div>
 </div>
 
@@ -154,24 +154,24 @@
 <!-- 사진 -->
 
   <div class="photo">
-    <img style="padding-top:25%;" src="../srcs/img/navy/kmj/kmj_01.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_02.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_03.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_04.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_05.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_06.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_07.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_08.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_09.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_10.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_11.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_12.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_13.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_14.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_15.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_16.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_17.jpg">
-    <img src="../srcs/img/navy/kmj/kmj_18.jpg">
+    <img style="padding-top:25%;" src="../srcs/img/navy/kmj/resized/kmj_01.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_02.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_03.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_04.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_05.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_06.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_07.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_08.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_09.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_10.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_11.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_12.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_13.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_14.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_15.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_16.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_17.jpg">
+    <img src="../srcs/img/navy/kmj/resized/kmj_18.jpg">
 
   </div>
 
