--- a/mobile/pk_m.html
+++ b/mobile/pk_m.html
@@ -154,17 +154,17 @@
 <!-- 사진 -->
 
   <div class="photo">
-    <img style="padding-top:25%;" src="../srcs/img/navy/pk/pk_01.jpg">
-    <img src="../srcs/img/navy/pk/pk_02.jpg">
-    <img src="../srcs/img/navy/pk/pk_03.jpg">
-    <img src="../srcs/img/navy/pk/pk_04.jpg">
-    <img src="../srcs/img/navy/pk/pk_05.jpg">
-    <img src="../srcs/img/navy/pk/pk_06.jpg">
-    <img src="../srcs/img/navy/pk/pk_07.jpg">
-    <img src="../srcs/img/navy/pk/pk_08.jpg">
-    <img src="../srcs/img/navy/pk/pk_09.jpg">
-    <img src="../srcs/img/navy/pk/pk_10.jpg">
-    <img src="../srcs/img/navy/pk/pk_11.jpg">
+    <img style="padding-top:25%;" src="../srcs/img/navy/pk/resized/pk_01.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_02.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_03.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_04.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_05.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_06.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_07.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_08.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_09.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_10.jpg">
+    <img src="../srcs/img/navy/pk/resized/pk_11.jpg">
 
   </div>
 
