--- a/mobile/sy_m.html
+++ b/mobile/sy_m.html
@@ -154,21 +154,21 @@
 <!-- 사진 -->
 
   <div class="photo">
-    <img style="padding-top:25%;" id="pic01" src="../srcs/img/navy/sy/sy_01.jpg">
-    <img style="padding-top:25%;" id="pic02" src="../srcs/img/navy/sy/sy_02.jpg">
-    <img src="../srcs/img/navy/sy/sy_03.jpg">
-    <img src="../srcs/img/navy/sy/sy_04.jpg">
-    <img src="../srcs/img/navy/sy/sy_05.jpg">
-    <img src="../srcs/img/navy/sy/sy_06.jpg">
-    <img id="pic03" src="../srcs/img/navy/sy/sy_07.jpg">
-    <img id="pic04" src="../srcs/img/navy/sy/sy_08.jpg">
-    <img id="pic05" src="../srcs/img/navy/sy/sy_09.jpg">
-    <img id="pic06" src="../srcs/img/navy/sy/sy_10.jpg">
-    <img id="pic07" src="../srcs/img/navy/sy/sy_11.jpg">
-    <img id="pic08"src="../srcs/img/navy/sy/sy_12.jpg">
-    <img id="pic09"src="../srcs/img/navy/sy/sy_13.jpg">
-    <img id="pic10"src="../srcs/img/navy/sy/sy_14.jpg">
-    <img src="../srcs/img/navy/sy/sy_15.jpg">
+    <img style="padding-top:25%;" id="pic01" src="../srcs/img/navy/sy/resized/sy_01.jpg">
+    <img style="padding-top:25%;" id="pic02" src="../srcs/img/navy/sy/resized/sy_02.jpg">
+    <img src="../srcs/img/navy/sy/resized/sy_03.jpg">
+    <img src="../srcs/img/navy/sy/resized/sy_04.jpg">
+    <img src="../srcs/img/navy/sy/resized/sy_05.jpg">
+    <img src="../srcs/img/navy/sy/resized/sy_06.jpg">
+    <img id="pic03" src="../srcs/img/navy/sy/resized/sy_07.jpg">
+    <img id="pic04" src="../srcs/img/navy/sy/resized/sy_08.jpg">
+    <img id="pic05" src="../srcs/img/navy/sy/resized/sy_09.jpg">
+    <img id="pic06" src="../srcs/img/navy/sy/resized/sy_10.jpg">
+    <img id="pic07" src="../srcs/img/navy/sy/resized/sy_11.jpg">
+    <img id="pic08"src="../srcs/img/navy/sy/resized/sy_12.jpg">
+    <img id="pic09"src="../srcs/img/navy/sy/resized/sy_13.jpg">
+    <img id="pic10"src="../srcs/img/navy/sy/resized/sy_14.jpg">
+    <img src="../srcs/img/navy/sy/resized/sy_15.jpg">
   </div>
     
 <script src="https://code.jquery.com/jquery-3.5.1.js" 
