--- a/mobile/kjh_m.html
+++ b/mobile/kjh_m.html
@@ -13,7 +13,7 @@
 <!-- 상단 바 및 메뉴버튼 아이콘 -->
 <div class="mobile-top-bar">
     <img class="ico toggle-side-bar-btn" src="logo4.png">
-    </img>
+    <img>
     <div class="logo"></div>
 </div>
 
@@ -154,24 +154,24 @@
 <!-- 사진 -->
 
   <div class="photo">
-    <img style="padding-top:25%;" src="../srcs/img/navy/kjh/kjh_01.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_02.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_03.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_04.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_05.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_06.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_07.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_08.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_09.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_10.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_11.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_12.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_13.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_14.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_15.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_17.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_18.jpg">
-    <img src="../srcs/img/navy/kjh/kjh_19.jpg">
+    <img style="padding-top:25%;" src="../srcs/img/navy/kjh/resized/kjh_01.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_02.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_03.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_04.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_05.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_06.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_07.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_08.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_09.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_10.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_11.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_12.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_13.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_14.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_15.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_17.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_18.jpg">
+    <img src="../srcs/img/navy/kjh/resized/kjh_19.jpg">
 
   </div>
 
