--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       if(jQuery.browser.mobile == true){
 		      location.href="./mobile/home_mobile.html";
         } else {
-		      location.href="home_pc.html";
+		      location.href="html/home_pc.html";
   }
 
     </script>
