--- a/html/afterglow.html
+++ b/html/afterglow.html
@@ -3041,12 +3041,12 @@
             </span>
         </div>
         <div id="Sec03">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_01.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_02.jpg">
+            <img class="imgs_vert" src="../srcs/img/afterglow/img_01.JPG">
+            <img class="imgs_vert" src="../srcs/img/afterglow/img_02.JPG">
             <img class="imgs_vert" src="../srcs/img/afterglow/img_03.jpg">
             <img class="imgs_vert" src="../srcs/img/afterglow/img_04.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_05.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_06.jpg">
+            <img class="imgs_vert" src="../srcs/img/afterglow/img_05.JPG">
+            <img class="imgs_vert" src="../srcs/img/afterglow/img_06.JPG">
             <img class="imgs_vert" src="../srcs/img/afterglow/img_07.jpg">
             <img class="imgs_vert" src="../srcs/img/afterglow/img_08.jpg">
 
