--- a/html/afterglow.html
+++ b/html/afterglow.html
@@ -2839,9 +2839,12 @@
         window.application = new Application();
 
     </script>
+    <script type="text/javascript">
+        document.oncontextmenu = function(){return false;}
+    </script>
 </head>
 
-<body>
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydown="return false">
     <div id="Landing_Page">
         <div id="Lines">
             <svg class="Linevertical1" viewBox="0 0 0.30000001192092896 3000">
@@ -3037,16 +3040,17 @@
         </div>
         <div id="Sec02-1">
             <span id="dscko">2020
-            <br>Afterglow
+            <br>
+            <br>&nbsp;&nbsp;&#171;Afterglow&#187;
             </span>
         </div>
         <div id="Sec03">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_01.JPG">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_02.JPG">
+            <img class="imgs_vert" src="../srcs/img/afterglow/img_01.jpg">
+            <img class="imgs_vert" src="../srcs/img/afterglow/img_02.jpg">
             <img class="imgs_vert" src="../srcs/img/afterglow/img_03.jpg">
             <img class="imgs_vert" src="../srcs/img/afterglow/img_04.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_05.JPG">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_06.JPG">
+            <img class="imgs_vert" src="../srcs/img/afterglow/img_05.jpg">
+            <img class="imgs_vert" src="../srcs/img/afterglow/img_06.jpg">
             <img class="imgs_vert" src="../srcs/img/afterglow/img_07.jpg">
             <img class="imgs_vert" src="../srcs/img/afterglow/img_08.jpg">
 
