--- a/html/dd.html
+++ b/html/dd.html
@@ -2839,9 +2839,12 @@
         window.application = new Application();
 
     </script>
+    <script type="text/javascript">
+        document.oncontextmenu = function(){return false;}
+    </script>
 </head>
 
-<body>
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydown="return false">
     <div id="Landing_Page">
         <div id="Lines">
             <svg class="Linevertical1" viewBox="0 0 0.30000001192092896 3000">
@@ -3037,16 +3040,17 @@
         </div>
         <div id="Sec02-1">
             <span id="dscko">2022/10
-            <br>프로젝트 
-            &#171;스몰 스튜디오, 스몰 신, <br>대전, 대구&#187;를 위한 사진.
+            <br>
+            <br>&nbsp;&nbsp;프로젝트 
+            &#171;스몰 스튜디오, 스몰 신, <br>&nbsp;&nbsp;대전, 대구&#187;를 위한 사진.
             <br><br>
-            디자인: 민동인<br>
-            출판: 좀비출판
+            &nbsp;&nbsp;디자인: 민동인<br>
+            &nbsp;&nbsp;출판: 좀비출판
             <br><br><br>
-            Photographs for the project <br>&#171;스몰 스튜디오, 스몰 신, 대전, 대구&#187;.
+            &nbsp;&nbsp;Photographs for the project <br>&nbsp;&nbsp;&#171;스몰 스튜디오, 스몰 신, 대전, 대구&#187;.
             <br><br>
-            Design: Dong-in Min<br>
-            Publish: Zombie Press
+            &nbsp;&nbsp;Design: Dong-in Min<br>
+            &nbsp;&nbsp;Publish: Zombie Press
             </span>
         </div>
         <div id="Sec03">
