--- a/html/portraits.html
+++ b/html/portraits.html
@@ -5,10 +5,9 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flying Bobs</title>
+    <title>Portraits</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-
     <script id="applicationScript">
         ///////////////////////////////////////
         // INITIALIZATION
@@ -2912,10 +2911,10 @@
                         <div class="circle"></div>
                     </div>
                     <div class="circle-wrap-blank">
-                        <div class="circle-current"></div>
+                        <div class="circle"></div>
                     </div>
                     <div class="circle-wrap">
-                        <div class="circle"></div>
+                        <div class="circle-current"></div>
                     </div>
                     <div class="circle-wrap">
                         <div class="circle"></div>
@@ -3039,32 +3038,43 @@
             </div>
         </div>
         <div id="Sec02-1">
-            <span id="dscko">2023/05
-                <br>
-                <br>&nbsp;&nbsp;인디밴드 검정치마의 노래<br>&nbsp;&nbsp;&#171;Flying Bobs&#187;의 팬메이드 뮤직비디오.
-                <br><br>
-                &nbsp;&nbsp;Fan-made Music video of <br>&nbsp;&nbsp;&#171;Flying Bobs&#187; by THE BLACK SKIRTS.
-                <br><br><br>
-                &nbsp;&nbsp;<a id="link" href="https://www.youtube.com/watch?v=rcKvLZ0Fv0s">Watch on Youtube.</a>
+            <span id="dscko">2021~
+            <br>
+            <br>&nbsp;&nbsp; &#171Portraits&#187;
             </span>
         </div>
         <div id="Sec03">
-            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_01.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_02.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_03.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_04.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_05.PNG">
-            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_06.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_07.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_08.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_09.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_10.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_11.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_12.PNG">
-            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_13.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_14.PNG">
-            <img class="imgs_vert" src="../srcs/img/flyingbobs/img_15.PNG">
-            <img class="imgs_hori" src="../srcs/img/flyingbobs/img_16.PNG">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_01.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_02.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_03.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_04.jpg">
+            <img class="imgs_hori" src="../srcs/img/portraits/img_05.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_06.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_07.jpg">
+            <img class="imgs_hori" src="../srcs/img/portraits/img_08.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_09.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_10.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_11.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_12.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_13.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_14.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_15.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_16.jpg">
+            <img class="imgs_hori" src="../srcs/img/portraits/img_17.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_18.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_19.jpg">
+            <img class="imgs_hori" src="../srcs/img/portraits/img_20.jpg">
+            <img class="imgs_hori" src="../srcs/img/portraits/img_21.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_22.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_23.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_24.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_25.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_26.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_27.jpg">
+            <img class="imgs_hori" src="../srcs/img/portraits/img_28.jpg">
+            <img class="imgs_hori" src="../srcs/img/portraits/img_29.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_30.jpg">
+            <img class="imgs_vert" src="../srcs/img/portraits/img_31.jpg">
         </div>
     </div>
 </body>
