--- a/html/sejong.html
+++ b/html/sejong.html
@@ -2839,9 +2839,12 @@
         window.application = new Application();
 
     </script>
+    <script type="text/javascript">
+        document.oncontextmenu = function(){return false;}
+    </script>
 </head>
 
-<body>
+<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false" onkeydown="return false">
     <div id="Landing_Page">
         <div id="Lines">
             <svg class="Linevertical1" viewBox="0 0 0.30000001192092896 3000">
@@ -3037,8 +3040,9 @@
         </div>
         <div id="Sec02-1">
             <span id="dscko">2022/06
-            <br>보드게임 &#171;우왕좌왕 세종대왕&#187;을 위한 사진.
-            <br><br> Photographs for the boardgame &#171;우왕좌왕 세종대왕&#187;.
+            <br>
+            <br>&nbsp;&nbsp;보드게임 &#171;우왕좌왕 세종대왕&#187;을 위한 사진.
+            <br><br>&nbsp;&nbsp;Photographs for the boardgame &#171;우왕좌왕 세종대왕&#187;.
             </span>
         </div>
         <div id="Sec03">
