--- a/html/portraits.html
+++ b/html/portraits.html
@@ -2872,7 +2872,7 @@
                     <span>Find me:</span>
                 </div>
                 <div id="footerloc">
-                    <span>Seoul, Korea</span>
+                    <span>Republic of Korea</span>
                 </div>
                 <div id="footerinsta">
                     <a href="https://www.instagram.com/kangminjedotcom/" target="_blank">Instagram</a>
