--- a/html/afterglow.html
+++ b/html/afterglow.html
@@ -2882,15 +2882,24 @@
                     <a href="tel:+821093239432">+82)10 9323 9432</a>
                 </div>
                 <div id="footermail">
-                    <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">kangminje000@gmail.com</a>
+                    <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Please Write Down Your Subject Here.)">kangminje000@gmail.com</a>
                 </div>
             </div>
             <div id="dsc">
                 <div id="dscko">
-                    <span>시각적인 쾌락을 추구하며, 생산해낸 - <br />낼 이미지를 통해 즐기게 한다.<br /><br />이것이 제가 이미지를 만드는 이유입니다.<br />이미지의 풍요로움은 사람들에게 욕구의 만족을 보장했습니다.<br />강민제는 현재의 범람하는 이미지들 속에서 높은 질의 이미지를 <br />생산하여 시각적 쾌락이라는 욕망을 실현합니다.</span>
+                    <span>시각적 희열을 탐구하며, 제작한 - 할 이미지를 통해 즐기도록 한다.
+                    <br>
+                    <br>이것이 제가 이미지를 만드는 이유입니다.
+                    <br>
+                    <br>범람하는 이미지 속에서, 우수한 품질의 이미지를 선보여
+                    <br>시각적 쾌락의 경험을 선사하고자 합니다.</span>
                 </div>
                 <div id="dscen">
-                    <span>Pursuing visual pleasure and make people to enjoy it<br />through the images that I produced. (and will produce).<br /><br />This is why Kang Minje creates images.<br />The richness of the image ensured the satisfaction <br />of people’s needs. Kang Minje realizes his desire<br />for visual pleasure by producing high-quality images <br />among the current flooding images.</span>
+                    <span>Exploring visual ecstasy, I aim to bring enjoyment<br>through created - to be created images. 
+                    <br>
+                    <br>This is why I make images.
+                    <br>
+                    <br>Amidst the inundation of images, I aspire to present high-quality visuals and offer an experience of visual pleasure.</span>
                 </div>
             </div>
             <div id="header">
