--- a/html/Thrill.html
+++ b/html/Thrill.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Afterglow</title>
+    <title>Thrill</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -2840,7 +2840,10 @@
 
     </script>
     <script type="text/javascript">
-        document.oncontextmenu = function(){return false;}
+        document.oncontextmenu = function() {
+            return false;
+        }
+
     </script>
 </head>
 
@@ -2882,24 +2885,24 @@
                     <a href="tel:+821093239432">+82)10 9323 9432</a>
                 </div>
                 <div id="footermail">
-                    <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Please Write Down Your Subject Here.)">kangminje000@gmail.com</a>
+                    <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">kangminje000@gmail.com</a>
                 </div>
             </div>
             <div id="dsc">
                 <div id="dscko">
                     <span>시각적 희열을 탐구하며, 제작한 - 할 이미지를 통해 즐기도록 한다.
-                    <br>
-                    <br>이것이 제가 이미지를 만드는 이유입니다.
-                    <br>
-                    <br>범람하는 이미지 속에서, 우수한 품질의 이미지를 선보여
-                    <br>시각적 쾌락의 경험을 선사하고자 합니다.</span>
+                        <br>
+                        <br>이것이 제가 이미지를 만드는 이유입니다.
+                        <br>
+                        <br>범람하는 이미지 속에서, 우수한 품질의 이미지를 선보여
+                        <br>시각적 쾌락의 경험을 선사하고자 합니다.</span>
                 </div>
                 <div id="dscen">
-                    <span>Exploring visual ecstasy, I aim to bring enjoyment<br>through created - to be created images. 
-                    <br>
-                    <br>This is why I make images.
-                    <br>
-                    <br>Amidst the inundation of images, I aspire to present high-quality visuals and offer an experience of visual pleasure.</span>
+                    <span>Exploring visual ecstasy, I aim to bring enjoyment<br>through created - to be created images.
+                        <br>
+                        <br>This is why I make images.
+                        <br>
+                        <br>Amidst the inundation of images, I aspire to present high-quality visuals and offer an experience of visual pleasure.</span>
                 </div>
             </div>
             <div id="header">
@@ -2912,7 +2915,7 @@
             </div>
         </div>
         <div id="Sec02">
-              <div id="selectedworks">
+            <div id="selectedworks">
                 <div id="dots">
                     <div class="circle-wrap">
                         <div class="circle"></div>
@@ -3079,9 +3082,9 @@
                     </a>
                 </div>
                 <!------->
-                
+
                 <span id="divider_commercial">_</span>
-                
+
                 <div id='works'>
                     <div id="yearbadedu">
                         <span>2022</span>
@@ -3116,21 +3119,16 @@
             </div>
         </div>
         <div id="Sec02-1">
-            <span id="dscko">2020
-            <br>
-            <br>&nbsp;&nbsp;&#171;Afterglow&#187;
+            <span id="dscko">2023/06
+                <br>
+                <br>&nbsp;&nbsp;&#171;Thrill&#187;
+
             </span>
         </div>
         <div id="Sec03">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_01.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_02.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_03.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_04.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_05.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_06.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_07.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_08.jpg">
-
+            <img class="imgs_vert" src="../srcs/img/thrill/img_01.jpg">
+            <img class="imgs_vert" src="../srcs/img/thrill/img_02.jpg">
+            <img class="imgs_hori" src="../srcs/img/thrill/img_03.jpg">
         </div>
     </div>
 </body>
