--- a/html/Glass.html
+++ b/html/Glass.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Afterglow</title>
+    <title>Glass</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -2882,7 +2882,7 @@
                     <a href="tel:+821093239432">+82)10 9323 9432</a>
                 </div>
                 <div id="footermail">
-                    <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Please Write Down Your Subject Here.)">kangminje000@gmail.com</a>
+                    <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">kangminje000@gmail.com</a>
                 </div>
             </div>
             <div id="dsc">
@@ -2912,7 +2912,7 @@
             </div>
         </div>
         <div id="Sec02">
-              <div id="selectedworks">
+                      <div id="selectedworks">
                 <div id="dots">
                     <div class="circle-wrap">
                         <div class="circle"></div>
@@ -3116,21 +3116,15 @@
             </div>
         </div>
         <div id="Sec02-1">
-            <span id="dscko">2020
+            <span id="dscko">2023/01
             <br>
-            <br>&nbsp;&nbsp;&#171;Afterglow&#187;
+            <br>&nbsp;&nbsp;&#171;Glass&#187;
             </span>
         </div>
         <div id="Sec03">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_01.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_02.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_03.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_04.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_05.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_06.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_07.jpg">
-            <img class="imgs_vert" src="../srcs/img/afterglow/img_08.jpg">
-
+            <video class="imgs_hori" src="../srcs/img/glass/Glass.mp4" autoplay loop muted></video>
+            <img class="imgs_hori" src="../srcs/img/glass/img_01.jpg">
+            <img class="imgs_hori" src="../srcs/img/glass/img_02.jpg">
         </div>
     </div>
 </body>
