--- a/html/dd.html
+++ b/html/dd.html
@@ -2912,7 +2912,7 @@
             </div>
         </div>
         <div id="Sec02">
-            <div id="selectedworks">
+                       <div id="selectedworks">
                 <div id="dots">
                     <div class="circle-wrap">
                         <div class="circle"></div>
@@ -2942,26 +2942,16 @@
                         <div class="circle"></div>
                     </div>
                     <div class="circle-wrap">
-                        <div class="circle-current"></div>
+                        <div class="circle"></div>
                     </div>
-                </div>
-                <div id="works">
-                    <div id="yearDust">
-                        <span>2019</span>
-                    </div>
-                    <a href="dust.html">
-                        <div id="worksDust">
-                            <span>Dust</span>
-                        </div>
-                    </a>
                 </div>
                 <div id='works'>
-                    <div id="yearAfterglow">
-                        <span>2020</span>
+                    <div id="yearPortraits">
+                        <span>2021~</span>
                     </div>
-                    <a href="afterglow.html">
-                        <div id="worksAfterglow">
-                            <span>Afterglow</span>
+                    <a href="portraits.html">
+                        <div id="worksPortraits">
+                            <span>Portraits</span>
                         </div>
                     </a>
                 </div>
@@ -2975,16 +2965,89 @@
                         </div>
                     </a>
                 </div>
-                <div id='works'>
-                    <div id="yearPortraits">
-                        <span>2021~</span>
+                <div id="works">
+                    <div id="yearDust">
+                        <span>2020</span>
                     </div>
-                    <a href="portraits.html">
-                        <div id="worksPortraits">
-                            <span>Portraits</span>
+                    <a href="dust.html">
+                        <div id="worksDust">
+                            <span>Dust</span>
                         </div>
                     </a>
                 </div>
+                <div id='works'>
+                    <div id="yearAfterglow">
+                        <span>2019</span>
+                    </div>
+                    <a href="afterglow.html">
+                        <div id="worksAfterglow">
+                            <span>Afterglow</span>
+                        </div>
+                    </a>
+                </div>
+
+                <div id='works'>
+                    <div id="yearGlass">
+                        <span>2023</span>
+                    </div>
+                    <a href="glass.html">
+                        <div id="worksGlass">
+                            <span>Glass</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
+                    <div id="yearCactus">
+                        <span>2023</span>
+                    </div>
+                    <a href="Cactus.html">
+                        <div id="worksCactus">
+                            <span>Cactus</span>
+                        </div>
+                    </a>
+                </div>
+                <div id="works">
+                    <div id="yearGemstone">
+                        <span>2023</span>
+                    </div>
+                    <a href="Gemstone.html">
+                        <div id="worksGemstone">
+                            <span>Gemstone</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
+                    <div id="yearThrill">
+                        <span>2023</span>
+                    </div>
+                    <a href="Thrill.html">
+                        <div id="worksThrill">
+                            <span>Thrill</span>
+                        </div>
+                    </a>
+                </div>
+                <div id="works">
+                    <div id="yearConflict">
+                        <span>2023</span>
+                    </div>
+                    <a href="Conflict.html">
+                        <div id="worksConflict">
+                            <span>Conflict</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
+                    <div id="yearEcstasy">
+                        <span>2023</span>
+                    </div>
+                    <a href="Ecstasy.html">
+                        <div id="worksEcstasy">
+                            <span>Ecstasy</span>
+                        </div>
+                    </a>
+                </div>
+                <!------>
+
                 <div id='works'>
                     <div id="yearSuseok">
                         <span class="yet">soon</span>
@@ -3011,10 +3074,14 @@
                     </div>
                     <a href="superposition.html">
                         <div id="worksSuperposition">
-                            <span class="yet">Superposition</span>
+                            <span class="yet">Superposit296ion</span>
                         </div>
                     </a>
                 </div>
+                <!------->
+                
+                <span id="divider_commercial">_</span>
+                
                 <div id='works'>
                     <div id="yearbadedu">
                         <span>2022</span>
@@ -3045,6 +3112,7 @@
                         </div>
                     </a>
                 </div>
+
             </div>
         </div>
         <div id="Sec02-1">
