--- a/html/home_pc.html
+++ b/html/home_pc.html
@@ -2840,7 +2840,10 @@
 
     </script>
     <script type="text/javascript">
-        document.oncontextmenu = function(){return false;}
+        document.oncontextmenu = function() {
+            return false;
+        }
+
     </script>
 </head>
 
@@ -2888,18 +2891,18 @@
             <div id="dsc">
                 <div id="dscko">
                     <span>시각적 희열을 탐구하며, 제작한 - 할 이미지를 통해 즐기도록 한다.
-                    <br>
-                    <br>이것이 제가 이미지를 만드는 이유입니다.
-                    <br>
-                    <br>범람하는 이미지 속에서, 우수한 품질의 이미지를 선보여
-                    <br>시각적 쾌락의 경험을 선사하고자 합니다.</span>
+                        <br>
+                        <br>이것이 제가 이미지를 만드는 이유입니다.
+                        <br>
+                        <br>범람하는 이미지 속에서, 우수한 품질의 이미지를 선보여
+                        <br>시각적 쾌락의 경험을 선사하고자 합니다.</span>
                 </div>
                 <div id="dscen">
-                    <span>Exploring visual ecstasy, I aim to bring enjoyment<br>through created - to be created images. 
-                    <br>
-                    <br>This is why I make images.
-                    <br>
-                    <br>Amidst the inundation of images, I aspire to present high-quality visuals and offer an experience of visual pleasure.</span>
+                    <span>Exploring visual ecstasy, I aim to bring enjoyment<br>through created - to be created images.
+                        <br>
+                        <br>This is why I make images.
+                        <br>
+                        <br>Amidst the inundation of images, I aspire to present high-quality visuals and offer an experience of visual pleasure.</span>
                 </div>
             </div>
             <div id="header">
@@ -2945,6 +2948,26 @@
                         <div class="circle"></div>
                     </div>
                 </div>
+                <div id='works'>
+                    <div id="yearPortraits">
+                        <span>2021~</span>
+                    </div>
+                    <a href="portraits.html">
+                        <div id="worksPortraits">
+                            <span>Portraits</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
+                    <div id="yearFlyingBobs">
+                        <span>2023</span>
+                    </div>
+                    <a href="flyingbobs.html">
+                        <div id="worksFlyingBobs">
+                            <span>Flying Bobs (Fan-Made MV)</span>
+                        </div>
+                    </a>
+                </div>
                 <div id="works">
                     <div id="yearDust">
                         <span>2020</span>
@@ -2965,26 +2988,69 @@
                         </div>
                     </a>
                 </div>
+
                 <div id='works'>
-                    <div id="yearFlyingBobs">
+                    <div id="yearGlass">
                         <span>2023</span>
                     </div>
-                    <a href="flyingbobs.html">
-                        <div id="worksFlyingBobs">
-                            <span>Flying Bobs (Fan-Made MV)</span>
+                    <a href="glass.html">
+                        <div id="worksGlass">
+                            <span>Glass</span>
                         </div>
                     </a>
                 </div>
                 <div id='works'>
-                    <div id="yearPortraits">
-                        <span>2021~</span>
+                    <div id="yearCactus">
+                        <span>2023</span>
                     </div>
-                    <a href="portraits.html">
-                        <div id="worksPortraits">
-                            <span>Portraits</span>
+                    <a href="Cactus.html">
+                        <div id="worksCactus">
+                            <span>Cactus</span>
                         </div>
                     </a>
                 </div>
+                <div id="works">
+                    <div id="yearGemstone">
+                        <span>2023</span>
+                    </div>
+                    <a href="Gemstone.html">
+                        <div id="worksGemstone">
+                            <span>Gemstone</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
+                    <div id="yearThrill">
+                        <span>2023</span>
+                    </div>
+                    <a href="Thrill.html">
+                        <div id="worksThrill">
+                            <span>Thrill</span>
+                        </div>
+                    </a>
+                </div>
+                <div id="works">
+                    <div id="yearConflict">
+                        <span>2023</span>
+                    </div>
+                    <a href="Conflict.html">
+                        <div id="worksConflict">
+                            <span>Conflict</span>
+                        </div>
+                    </a>
+                </div>
+                <div id='works'>
+                    <div id="yearEcstasy">
+                        <span>2023</span>
+                    </div>
+                    <a href="Ecstasy.html">
+                        <div id="worksEcstasy">
+                            <span>Ecstasy</span>
+                        </div>
+                    </a>
+                </div>
+                <!------>
+
                 <div id='works'>
                     <div id="yearSuseok">
                         <span class="yet">soon</span>
@@ -3011,10 +3077,14 @@
                     </div>
                     <a href="superposition.html">
                         <div id="worksSuperposition">
-                            <span class="yet">Superposition</span>
+                            <span class="yet">Superposit296ion</span>
                         </div>
                     </a>
                 </div>
+                <!------->
+                
+                <span id="divider_commercial">_</span>
+                
                 <div id='works'>
                     <div id="yearbadedu">
                         <span>2022</span>
@@ -3045,6 +3115,7 @@
                         </div>
                     </a>
                 </div>
+
             </div>
         </div>
         <div id="Sec03" style="position: fixed">
