--- a/mobile/badedu_m.html
+++ b/mobile/badedu_m.html
@@ -2,8 +2,15 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>kangminjedotcom</title>
+    <meta charset="utf-8">
+    <meta name="title" content="KANG MINJE">
+    <meta name="description" content="Website of Photographer Kang Minje">
+    <meta property="og:site_name" content="KANG MINJE">
+    <meta property="og:title" content="KANG MINJE">
+    <meta property="og:description" content="Website of Photographer Kang Minje">
+    <meta name="robots" content=“index”>
+    
+    <title>KANG MINJE</title>
     <link rel="stylesheet" href="./style.css">
 
 </head>
