--- a/html/glass.html
+++ b/html/glass.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Website of Photographer Kang Minje">
     <meta name="robots" content=“index”>
     
-    <title>Dust</title>
+    <title>Glass</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -3124,24 +3124,15 @@
             </div>
         </div>
         <div id="Sec02-1">
-            <span id="dscko">2019
+            <span id="dscko">2023/01
             <br>
-            <br>&nbsp;&nbsp; &#171Dust&#187;
+            <br>&nbsp;&nbsp;&#171;Glass&#187;
             </span>
         </div>
         <div id="Sec03">
-            <img class="imgs_vert" src="../srcs/img/dust/img_01.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_02.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_03.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_04.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_05.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_06.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_07.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_08.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_09.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_10.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_11.jpg">
-            <img class="imgs_vert" src="../srcs/img/dust/img_12.jpg">
+            <video class="imgs_hori" src="../srcs/img/glass/Glass.mp4" autoplay loop muted></video>
+            <img class="imgs_hori" src="../srcs/img/glass/img_01.jpg">
+            <img class="imgs_hori" src="../srcs/img/glass/img_02.jpg">
         </div>
     </div>
 </body>
