--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+   
     <meta charset="utf-8">
-    <title></title>
+    <meta name="title" content="KANG MINJE">
+    <meta name="description" content="Website of Photographer Kang Minje">
+    <meta property="og:site_name" content="KANG MINJE">
+    <meta property="og:title" content="KANG MINJE">
+    <meta property="og:description" content="Website of Photographer Kang Minje">
+    <meta name="robots" content=“index”>
+    
+    
+    <title>KANG MINJE</title>
     <link rel="stylesheet" href="css/iframepage.css">
   </head>
   <body>
