--- a/html/Conflict.html
+++ b/html/Conflict.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="title" content="KANG MINJE">
+    <meta name="description" content="Website of Photographer Kang Minje">
+    <meta property="og:site_name" content="KANG MINJE">
+    <meta property="og:title" content="KANG MINJE">
+    <meta property="og:description" content="Website of Photographer Kang Minje">
+    <meta name="robots" content=“index”>
+    
     <title>Conflict</title>
     <link rel="icon" href="../srcs/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
