--- a/html/portraits.html
+++ b/html/portraits.html
@@ -3160,6 +3160,9 @@
             <img class="imgs_hori" src="../srcs/img/portraits/img_29.jpg">
             <img class="imgs_vert" src="../srcs/img/portraits/img_30.jpg">
             <img class="imgs_vert" src="../srcs/img/portraits/img_31.jpg">
+            <img class="imgs_hori" src="../srcs/img/portraits/img_32.JPG">
+            <img class="imgs_hori" src="../srcs/img/portraits/img_33.jpg">
+            
         </div>
     </div>
 </body>
