--- a/html/portraits.html
+++ b/html/portraits.html
@@ -2877,7 +2877,7 @@
         <div id="Sec01">
             <div id="footer">
                 <div id="footerfindme">
-                    <span>Find me:</span>
+                    <span style="top: -10px;">Find me:</span>
                 </div>
                 <div id="footerloc">
                     <span>Republic of Korea</span>
@@ -2889,24 +2889,23 @@
                     <a href="tel:+821093239432">+82)10 9323 9432</a>
                 </div>
                 <div id="footermail">
-                    <a href="mailto:kangminje000@gmail.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">kangminje000@gmail.com</a>
+                    <a href="mailto:info@kangminje.com?subject=[kangminjedotcom] (Write Down Your Subject Here.)">info@kangminje.com</a>
+                </div>
+                <div id="footeryoutube">
+                    <a href="https://youtube.com/@kangminjedotfilm?si=yNgnELrLFEhIll_T" target="_blank">Youtube</a>
                 </div>
             </div>
             <div id="dsc">
                 <div id="dscko">
-                    <span>시각적 희열을 탐구하며, 제작한 - 할 이미지를 통해 즐기도록 한다.
-                    <br>
-                    <br>이것이 제가 이미지를 만드는 이유입니다.
-                    <br>
-                    <br>범람하는 이미지 속에서, 우수한 품질의 이미지를 선보여
-                    <br>시각적 쾌락의 경험을 선사하고자 합니다.</span>
+                    <span>다양한 매체를 이용한 이미지를 꾀한다.
+                        <br>평면과 입체에서 대상을 뭉치고 끊어내고 포개어
+                        <br>우연히 생겨난 시각적 유희를 즐긴다.
+                        </span>
                 </div>
                 <div id="dscen">
-                    <span>Exploring visual ecstasy, I aim to bring enjoyment<br>through created - to be created images. 
-                    <br>
-                    <br>This is why I make images.
-                    <br>
-                    <br>Amidst the inundation of images, I aspire to present high-quality visuals and offer an experience of visual pleasure.</span>
+                    <span>
+                        I aim to create images using various media.
+                    <br>By bringing objects together, breaking them apart, and intertwining them in both two-dimensional and three-dimensional spaces.</span>
                 </div>
             </div>
             <div id="header">
@@ -3065,6 +3064,7 @@
                         </div>
                     </a>
                 </div>
+<!--
                 <div id='works'>
                     <div id="yearTheWhiteWall">
                         <span class="yet">soon</span>
@@ -3085,6 +3085,7 @@
                         </div>
                     </a>
                 </div>
+-->
                 <!------->
                 
                 <span id="divider_commercial">_</span>
